--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<html lang="en">
   <head>
-    <title>Todo App</title>
+    <title>Rent or Buy?</title>
+    <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
