--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <title>Rent or Buy?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
