--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-br">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+  <meta name="theme-color" content="#19a974">
+  <link rel="shortcut icon" href="/assets/favicon.ico">
+  <link rel="stylesheet" href="//unpkg.com/tachyons@4.7.4/css/tachyons.min.css">
   <title>Alugar ou Comprar?</title>
   <body>
     <div id="root"></div>
