--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#19a974">
-  <link rel="shortcut icon" href="/assets/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="//unpkg.com/tachyons@4.7.4/css/tachyons.min.css">
   <title>Alugar ou Comprar?</title>
   <body>
